# hloc_customized

./: .gitignore  pyproject.toml
openspec/: project.md
openspec/changes/add-rgbd-pipeline/: proposal.md  tasks.md
openspec/changes/add-rgbd-pipeline/specs/rgbd-pose-graph/: spec.md
rgbd_pipeline/: __init__.py  cli.py  dataset.py  features.py  geometry.py  matching.py  optimization.py  pipeline.py  pointcloud.py  pose_graph.py
tests/: test_dataset_smoke.py
