[project]
name = "rgbd-pipeline"
version = "0.1.0"
description = "RGB-D pose-graph pipeline for stereo depth datasets"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "torch",
  "lightglue @ git+https://github.com/cvg/LightGlue.git",
  "open3d",
  "loguru",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]
gtsam = [
  "gtsam",
]

[project.scripts]
rgbd-pipeline = "rgbd_pipeline.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rgbd_pipeline"]
